<resources>
    <string name="app_name">Dinord</string>
    <string name="dinord_welcome"> Welcome to Dinord!!</string>
    <string name="title_activity_coffee">coffee</string>
    <string name="ready_button">ready>></string>
    <string name="select_your_item">Select Your Item From the list:</string>
    <string name="proceed_after_select">Proceed</string>
    <string name="quantity">QUANTITY</string>
    <string name="value"><b>0</b></string>
    <string name="order">ORDER</string>
    <string name="hint_name">John Trailor</string>
    <string name="price">price</string>
    <string name="price_value">$ 0</string>
    <string name="button_pos">+</string>
    <string name="button_neg">-</string>
    <string name="item_title_coffee">Item: Coffee</string>
    <string name="Toppings"> toppings</string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="Summary_coffee">summary</string>
    <string name="Coffee_gmail_send">send</string>
    <string name="content_description">One of the image</string>
    <string name="item_title_tea">Item: Tea</string>
    <string name="normal_tea">Normal</string>
    <string name="black_tea">Black</string>
    <string name="green_tea">Green</string>
    <string name="item_masala_dosa">Item: Masala Dosa</string>
    <string name="item_thuppa_dosa">Item: Thuppa Dosa</string>
    <string name="item_plain_dosa">Item: Plain Dosa</string>
    <string name="item_baje">Item: Baje </string>
    <string name="Select_baje">Select Goli baje/ Neerulli Baje: </string>
    <string name="check_item_title_idli">Check your items here:</string>
    <string name="check_idli">Idli Vade</string>
    <string name="check_ksheera">Ksheera</string>
    <string name="item_parota">Item: Parota</string>
    <string name="item_chapathi">Item: Chapathi</string>
    <string name="juice_picker">Pick your Favourite Juice:</string>
    <string name="milkShake_picker">Pick your Favourite Milkshake:</string>
    <string name="add_more">More >></string>
    <string name="add_more_title"> Add more to your order List here: </string>
    <string name="continue_after_select">Continue</string>
    <string name="login_title">Login</string>
    <string name="app_title">DinOrd</string>
    <string name="name_hint">Enter Name </string>
    <string name="password">Password</string>
    <string name="AttemptsLeft">Attempts Left : </string>
    <string name="logButtonText">login</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="new_login_statement"> New to Dinord?? </string>
    <string name="clickable_signup"><u>Sign Up</u></string>
    <string name="hereOfSignUpstate">Here</string>
    <string name="CreatePassword">Create Password</string>
    <string name="ReTypePassword">ReType Password</string>
    <string name="SignUpButtonText"> Sign Up </string>
    <string name="order_home_screen"> Order</string>
    <string name="my_orders">My Orders</string>
    <string name="edit_account"> Edit Account </string>
    <string name="sign_out">Sign out</string>
    <string name="dinord_cash">DinOrd payment </string>
    <string name="about_us">About Us</string>
    <string name="my_order_list">My Orders:</string>
    <string name="item_title"><u> Item </u></string>
    <string name="quantity_title"><u> Quantity </u></string>
    <string name="delete_button">Delete</string>
    <string name="view_button">View</string>
    <string name="order_list_title">Order List:</string>
    <string name="start_order"> Place Order </string>
    <string name="filter_by">Filter Using:</string>
    <string name="filter_item">Select Item :</string>
    <string name="filter_quantity">Select Quantity :</string>
    <string name="price_title"><u> Price </u> </string>
    <string name="rememberMe"> Remember Me </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
